@@ -2,8 +2,6 @@ package eu.europeana.cloud.service.dps.rest;
 
 import eu.europeana.cloud.common.model.dps.TaskInfo;
 import eu.europeana.cloud.common.model.dps.TaskState;
-import eu.europeana.cloud.mcs.driver.DataSetServiceClient;
-import eu.europeana.cloud.mcs.driver.FileServiceClient;
 import eu.europeana.cloud.mcs.driver.RecordServiceClient;
 import eu.europeana.cloud.service.dps.DpsTask;
 import eu.europeana.cloud.service.dps.PluginParameterKeys;
@@ -14,6 +12,7 @@ import eu.europeana.cloud.service.dps.exception.DpsTaskValidationException;
 import eu.europeana.cloud.service.dps.exceptions.TaskSubmissionException;
 import eu.europeana.cloud.service.dps.service.utils.TopologyManager;
 import eu.europeana.cloud.service.dps.storm.dao.CassandraTaskInfoDAO;
+import eu.europeana.cloud.service.dps.storm.dao.TaskDiagnosticInfoDAO;
 import eu.europeana.cloud.service.dps.utils.files.counter.FilesCounter;
 import eu.europeana.cloud.service.dps.utils.files.counter.FilesCounterFactory;
 import org.junit.Before;
@@ -30,8 +29,8 @@ import org.springframework.test.context.web.WebAppConfiguration;
 
 import javax.validation.constraints.NotNull;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 
@@ -43,9 +42,7 @@ import static org.junit.Assert.*;
 import static org.mockito.Matchers.any;
 import static org.mockito.Matchers.anyLong;
 import static org.mockito.Matchers.anyString;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.reset;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @RunWith(SpringRunner.class)
 @WebAppConfiguration
@@ -63,6 +60,7 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     private final static String SAMPLE_METIS_DATASET_ID = "ORG_DSID_DSNAME";
 
     private final static String SAMPLE_TOPOLOGY_NAME = "sampleTopology";
+    private final static String XSLT_TOPOLOGY_NAME = "xslt_topology";
     private DpsTask XSLT_TASK;
     private DpsTask XSLT_TASK2;
     private DpsTask XSLT_TASK_WITH_MALFORMED_URL;
@@ -90,12 +88,6 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     private RecordServiceClient recordServiceClient;
 
     @Autowired
-    private DataSetServiceClient dataSetServiceClient;
-
-    @Autowired
-    private FileServiceClient fileServiceClient;
-
-    @Autowired
     private CassandraTaskInfoDAO taskDAO;
 
     @Autowired
@@ -104,20 +96,28 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     @Autowired
     private FilesCounter filesCounter;
 
+    @Autowired
+    public TaskDiagnosticInfoDAO taskDiagnosticInfoDAO;
+
     private MockHttpServletRequest request;
 
     @Before
     public void mockUp() throws Exception {
         XSLT_TASK = new DpsTask("xsltTask");
-        XSLT_TASK.addDataEntry(FILE_URLS, Arrays.asList("http://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
+        XSLT_TASK.addDataEntry(FILE_URLS, List.of("http://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
         XSLT_TASK.addParameter(PluginParameterKeys.METIS_DATASET_ID, SAMPLE_METIS_DATASET_ID);
+        XSLT_TASK.addParameter(PluginParameterKeys.XSLT_URL, "http://test.xslt");
+
+        XSLT_TASK.addParameter(PluginParameterKeys.REVISION_NAME, "sampleRevisionNAme");
+        XSLT_TASK.addParameter(PluginParameterKeys.REVISION_PROVIDER, "sampleRevisionProvider");
+        XSLT_TASK.addParameter(PluginParameterKeys.REVISION_TIMESTAMP, "2021-07-12T16:50:00.000Z");
 
         XSLT_TASK2 = new DpsTask("xsltTask");
-        XSLT_TASK2.addDataEntry(FILE_URLS, Arrays.asList("http://127.0.0.1:8080/mcs/records/sampleId/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
+        XSLT_TASK2.addDataEntry(FILE_URLS, List.of("http://127.0.0.1:8080/mcs/records/sampleId/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
         XSLT_TASK2.addParameter(PluginParameterKeys.METIS_DATASET_ID, SAMPLE_METIS_DATASET_ID);
 
         XSLT_TASK_WITH_MALFORMED_URL = new DpsTask("taskWithMalformedUrl");
-        XSLT_TASK_WITH_MALFORMED_URL.addDataEntry(FILE_URLS, Arrays.asList("httpz://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
+        XSLT_TASK_WITH_MALFORMED_URL.addDataEntry(FILE_URLS, List.of("httpz://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
         XSLT_TASK_WITH_MALFORMED_URL.addParameter(PluginParameterKeys.METIS_DATASET_ID, SAMPLE_METIS_DATASET_ID);
 
         TaskInfo taskInfo = TaskInfo.builder()
@@ -146,7 +146,7 @@ public class DpsResourceAATest extends AbstractSecurityTest {
         Task Submission tests
      */
     @Test(expected = AuthenticationCredentialsNotFoundException.class)
-    public void shouldThrowExceptionWhenNonAuthenticatedUserTriesToSubmitTask() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void shouldThrowExceptionWhenNonAuthenticatedUserTriesToSubmitTask() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, IOException {
 
         DpsTask t = new DpsTask("xsltTask");
         String topology = "xsltTopology";
@@ -155,25 +155,37 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     }
 
     @Test
-    public void shouldBeAbleToSubmitTaskToTopologyThatHasPermissionsTo() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void shouldBeAbleToSubmitTaskToTopologyThatHasPermissionsTo() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, IOException {
         login(ADMIN, ADMIN_PASSWORD);
-        topologiesResource.grantPermissionsToTopology(VAN_PERSIE, SAMPLE_TOPOLOGY_NAME);
+        when(topologyManager.containsTopology(XSLT_TOPOLOGY_NAME)).thenReturn(true);
+        topologiesResource.grantPermissionsToTopology(VAN_PERSIE, XSLT_TOPOLOGY_NAME);
         logoutEveryone();
         login(VAN_PERSIE, VAN_PERSIE_PASSWORD);
         DpsTask task = new DpsTask();
-        task.addDataEntry(FILE_URLS, Arrays.asList("http://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
+        task.addDataEntry(FILE_URLS, List.of("http://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
         task.addParameter(PluginParameterKeys.MIME_TYPE, "image/tiff");
         task.addParameter(PluginParameterKeys.OUTPUT_MIME_TYPE, "image/jp2");
-        topologyTasksResource.submitTask(request, task, SAMPLE_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
+
+        task.addParameter(PluginParameterKeys.XSLT_URL, "http://test.xslt");
+        task.addParameter(PluginParameterKeys.REVISION_NAME, "sampleRevisionNAme");
+        task.addParameter(PluginParameterKeys.REVISION_PROVIDER, "sampleRevisionProvider");
+        task.addParameter(PluginParameterKeys.REVISION_TIMESTAMP, "2021-07-12T16:50:00.000Z");
+
+        topologyTasksResource.submitTask(request, task, XSLT_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
     }
 
     @Test
-    public void shouldBeAbleToSubmitTaskToXsltTopology() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void shouldBeAbleToSubmitTaskToXsltTopology() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, IOException {
         //when
         DpsTask task = new DpsTask("xsltTask");
-        task.addDataEntry(FILE_URLS, Arrays.asList("http://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
+        task.addDataEntry(FILE_URLS, List.of("http://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
         task.addParameter(PluginParameterKeys.XSLT_URL, "http://test.xslt");
         task.addParameter(PluginParameterKeys.METIS_DATASET_ID, SAMPLE_METIS_DATASET_ID);
+
+        task.addParameter(PluginParameterKeys.XSLT_URL, "http://test.xslt");
+        task.addParameter(PluginParameterKeys.REVISION_NAME, "sampleRevisionNAme");
+        task.addParameter(PluginParameterKeys.REVISION_PROVIDER, "sampleRevisionProvider");
+        task.addParameter(PluginParameterKeys.REVISION_TIMESTAMP, "2021-07-12T16:50:00.000Z");
         String topologyName = "xslt_topology";
         String user = VAN_PERSIE;
         grantUserToTopology(topologyName, user);
@@ -183,7 +195,7 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     }
 
     @Test
-    public void shouldThrowDpsTaskValidationExceptionOnSubmitTaskToXsltTopologyWithMissingFileUrls() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void shouldThrowDpsTaskValidationExceptionOnSubmitTaskToXsltTopologyWithMissingFileUrls() throws AccessDeniedOrTopologyDoesNotExistException, IOException {
         //when
         DpsTask task = new DpsTask("xsltTask");
         task.addParameter(PluginParameterKeys.XSLT_URL, "http://test.xslt");
@@ -198,15 +210,15 @@ public class DpsResourceAATest extends AbstractSecurityTest {
             fail();
         } catch (DpsTaskValidationException e) {
             //then
-            assertThat(e.getMessage(), startsWith("Validation failed"));
+            assertThat(e.getMessage(), startsWith("Expected parameter"));
         }
     }
 
     @Test
-    public void shouldThrowDpsTaskValidationExceptionOnSubmitTaskToXsltTopologyWithMissingXsltUrl() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void shouldThrowDpsTaskValidationExceptionOnSubmitTaskToXsltTopologyWithMissingXsltUrl() throws AccessDeniedOrTopologyDoesNotExistException, IOException {
         //when
         DpsTask task = new DpsTask("xsltTask");
-        task.addDataEntry(FILE_URLS, Arrays.asList("http://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
+        task.addDataEntry(FILE_URLS, List.of("http://127.0.0.1:8080/mcs/records/FUWQ4WMUGIGEHVA3X7FY5PA3DR5Q4B2C4TWKNILLS6EM4SJNTVEQ/representations/TIFF/versions/86318b00-6377-11e5-a1c6-90e6ba2d09ef/files/sampleFileName.txt"));
         task.addParameter(PluginParameterKeys.METIS_DATASET_ID, SAMPLE_METIS_DATASET_ID);
         String topologyName = "xslt_topology";
         String user = VAN_PERSIE;
@@ -230,7 +242,7 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     }
 
     @Test(expected = AccessDeniedException.class)
-    public void shouldNotBeAbleToSubmitTaskToTopologyThatHasNotPermissionsTo() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void shouldNotBeAbleToSubmitTaskToTopologyThatHasNotPermissionsTo() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, IOException {
         login(ADMIN, ADMIN_PASSWORD);
         topologiesResource.grantPermissionsToTopology(VAN_PERSIE, SAMPLE_TOPOLOGY_NAME);
         logoutEveryone();
@@ -244,12 +256,13 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     @Test
     public void shouldBeAbleToCheckProgressIfHeIsTheTaskOwner() throws AccessDeniedOrObjectDoesNotExistException, AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
 
+        when(topologyManager.containsTopology(XSLT_TOPOLOGY_NAME)).thenReturn(true);
         login(ADMIN, ADMIN_PASSWORD);
-        topologiesResource.grantPermissionsToTopology(VAN_PERSIE, SAMPLE_TOPOLOGY_NAME);
+        topologiesResource.grantPermissionsToTopology(VAN_PERSIE, XSLT_TOPOLOGY_NAME);
 
         login(VAN_PERSIE, VAN_PERSIE_PASSWORD);
-        submitTaskAndWait(XSLT_TASK, SAMPLE_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
-        topologyTasksResource.getTaskProgress(SAMPLE_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId());
+        submitTaskAndWait(XSLT_TASK, XSLT_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
+        topologyTasksResource.getTaskProgress(XSLT_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId());
     }
 
     @Test(expected = AuthenticationCredentialsNotFoundException.class)
@@ -262,14 +275,13 @@ public class DpsResourceAATest extends AbstractSecurityTest {
 
     @Test(expected = AccessDeniedException.class)
     public void vanPersieShouldNotBeAbleCheckProgressOfRonaldosTask() throws AccessDeniedOrObjectDoesNotExistException,
-            AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, IOException, ExecutionException,
-            InterruptedException {
+            AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, IOException {
 
         login(ADMIN, ADMIN_PASSWORD);
         topologiesResource.grantPermissionsToTopology(RONALDO, SAMPLE_TOPOLOGY_NAME);
 
         login(RONALDO, RONALD_PASSWORD);
-        submitTaskAndWait(XSLT_TASK, SAMPLE_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
+        submitTaskAndWait(XSLT_TASK, XSLT_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
         login(VAN_PERSIE, VAN_PERSIE_PASSWORD);
         topologyTasksResource.getTaskProgress(SAMPLE_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId());
     }
@@ -288,7 +300,7 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     }
 
     @Test
-    public void vanPersieShouldNotBeAbleSubmitTaskToNotDefinedTopology() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void vanPersieShouldNotBeAbleSubmitTaskToNotDefinedTopology() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, IOException {
         //given
 
         reset(topologyManager);
@@ -309,18 +321,18 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     @Test
     public void vanPersieShouldNotBeAbleGetTaskProgressToNotDefinedTopology() throws
             AccessDeniedOrTopologyDoesNotExistException, AccessDeniedOrObjectDoesNotExistException,
-            DpsTaskValidationException, IOException, ExecutionException, InterruptedException {
+            DpsTaskValidationException, IOException {
         //given
 
         reset(topologyManager);
-        when(topologyManager.containsTopology(SAMPLE_TOPOLOGY_NAME)).thenReturn(true, true, false);
+        when(topologyManager.containsTopology(XSLT_TOPOLOGY_NAME)).thenReturn(true, true, false);
         login(ADMIN, ADMIN_PASSWORD);
-        topologiesResource.grantPermissionsToTopology(RONALDO, SAMPLE_TOPOLOGY_NAME);
+        topologiesResource.grantPermissionsToTopology(RONALDO, XSLT_TOPOLOGY_NAME);
         login(RONALDO, RONALD_PASSWORD);
-        submitTaskAndWait( XSLT_TASK, SAMPLE_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
+        submitTaskAndWait( XSLT_TASK, XSLT_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
         //when
         try {
-            topologyTasksResource.getTaskProgress(SAMPLE_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId());
+            topologyTasksResource.getTaskProgress(XSLT_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId());
             fail();
             //then
         } catch (AccessDeniedOrTopologyDoesNotExistException e) {
@@ -329,17 +341,17 @@ public class DpsResourceAATest extends AbstractSecurityTest {
 
 
     @Test
-    public void UserShouldNotBeAbleKillTaskToNotDefinedTopology() throws AccessDeniedOrTopologyDoesNotExistException, AccessDeniedOrObjectDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void UserShouldNotBeAbleKillTaskToNotDefinedTopology() throws AccessDeniedOrTopologyDoesNotExistException, AccessDeniedOrObjectDoesNotExistException, DpsTaskValidationException, IOException {
         //given
         reset(topologyManager);
-        when(topologyManager.containsTopology(SAMPLE_TOPOLOGY_NAME)).thenReturn(true, true, false);
+        when(topologyManager.containsTopology(XSLT_TOPOLOGY_NAME)).thenReturn(true, true, false);
         login(ADMIN, ADMIN_PASSWORD);
-        topologiesResource.grantPermissionsToTopology(RONALDO, SAMPLE_TOPOLOGY_NAME);
+        topologiesResource.grantPermissionsToTopology(RONALDO, XSLT_TOPOLOGY_NAME);
         login(RONALDO, RONALD_PASSWORD);
-        submitTaskAndWait( XSLT_TASK, SAMPLE_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
+        submitTaskAndWait( XSLT_TASK, XSLT_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
         //when
         try {
-            topologyTasksResource.killTask(SAMPLE_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId(),"Dropped by the user");
+            topologyTasksResource.killTask(XSLT_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId(),"Dropped by the user");
             fail();
             //then
         } catch (AccessDeniedOrTopologyDoesNotExistException e) {
@@ -347,18 +359,18 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     }
 
     @Test
-    public void UserShouldNotBeAbleKillTaskHeDidNotSend() throws AccessDeniedOrTopologyDoesNotExistException, AccessDeniedOrObjectDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void UserShouldNotBeAbleKillTaskHeDidNotSend() throws AccessDeniedOrTopologyDoesNotExistException, AccessDeniedOrObjectDoesNotExistException, DpsTaskValidationException, IOException {
         //given
         reset(topologyManager);
-        when(topologyManager.containsTopology(SAMPLE_TOPOLOGY_NAME)).thenReturn(true, true, true);
+        when(topologyManager.containsTopology(XSLT_TOPOLOGY_NAME)).thenReturn(true, true, true);
         login(ADMIN, ADMIN_PASSWORD);
-        topologiesResource.grantPermissionsToTopology(ADMIN, SAMPLE_TOPOLOGY_NAME);
-        submitTaskAndWait(XSLT_TASK, SAMPLE_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
+        topologiesResource.grantPermissionsToTopology(ADMIN, XSLT_TOPOLOGY_NAME);
+        submitTaskAndWait(XSLT_TASK, XSLT_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
         login(RONALDO, RONALD_PASSWORD);
 
         //when
         try {
-            topologyTasksResource.killTask(SAMPLE_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId(),"Dropped by the user");
+            topologyTasksResource.killTask(XSLT_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId(),"Dropped by the user");
             fail();
             //then
         } catch (AccessDeniedException e) {
@@ -366,16 +378,16 @@ public class DpsResourceAATest extends AbstractSecurityTest {
     }
 
     @Test
-    public void UserShouldBeAbleKillTaskHeSent() throws AccessDeniedOrTopologyDoesNotExistException, AccessDeniedOrObjectDoesNotExistException, DpsTaskValidationException, TaskSubmissionException, IOException, ExecutionException, InterruptedException {
+    public void UserShouldBeAbleKillTaskHeSent() throws AccessDeniedOrTopologyDoesNotExistException, DpsTaskValidationException, IOException {
         //given
         reset(topologyManager);
-        when(topologyManager.containsTopology(SAMPLE_TOPOLOGY_NAME)).thenReturn(true, true, true);
+        when(topologyManager.containsTopology(XSLT_TOPOLOGY_NAME)).thenReturn(true, true, true);
         login(ADMIN, ADMIN_PASSWORD);
-        topologiesResource.grantPermissionsToTopology(ADMIN, SAMPLE_TOPOLOGY_NAME);
-        submitTaskAndWait(XSLT_TASK, SAMPLE_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
+        topologiesResource.grantPermissionsToTopology(ADMIN, XSLT_TOPOLOGY_NAME);
+        submitTaskAndWait(XSLT_TASK, XSLT_TOPOLOGY_NAME, AUTH_HEADER_VALUE);
         //when
         try {
-            ResponseEntity<String> response = topologyTasksResource.killTask(SAMPLE_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId(),"Dropped by the user");
+            ResponseEntity<String> response = topologyTasksResource.killTask(XSLT_TOPOLOGY_NAME, "" + XSLT_TASK.getTaskId(),"Dropped by the user");
             assertNotNull(response);
             assertEquals(200, response.getStatusCodeValue());
         } catch (Exception e) {
@@ -385,7 +397,7 @@ public class DpsResourceAATest extends AbstractSecurityTest {
 
     void submitTaskAndWait(DpsTask dpsTask, String topologyName, String authHeader)
             throws DpsTaskValidationException, AccessDeniedOrTopologyDoesNotExistException,
-            IOException, ExecutionException, InterruptedException {
+            IOException {
         topologyTasksResource.submitTask(request, dpsTask, topologyName, authHeader);
         try {
             Thread.sleep(5000);
